// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsolines get a countour 1`] = `
Object {
  "first": 2,
  "last": 8,
  "length": 83544,
}
`;

exports[`jsolines get a jsolines feature 1`] = `
{
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "MultiPolygon",
    "coordinates": {
      "first-coordinates": {
        "first": {
          "first": {
            "first": "-86.65740967",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "last": {
            "first": "-86.65740967",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "length": "1177.00000000"
        },
        "last": {
          "first": {
            "first": "-86.65740967",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "last": {
            "first": "-86.65740967",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "length": "1177.00000000"
        },
        "length": "1.00000000"
      },
      "last-coordinates": {
        "first": {
          "first": {
            "first": "-86.65740967",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "last": {
            "first": "-86.65740967",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "length": "1177.00000000"
        },
        "last": {
          "first": {
            "first": "-86.65740967",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "last": {
            "first": "-86.65740967",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "length": "1177.00000000"
        },
        "length": "1.00000000"
      },
      "length": "1.00000000"
    }
  }
}
`;

exports[`jsolines get a jsolines feature without interpolation 1`] = `
{
  "type": "Feature",
  "properties": {},
  "geometry": {
    "type": "MultiPolygon",
    "coordinates": {
      "first-coordinates": {
        "first": {
          "first": {
            "first": "-86.65603638",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "last": {
            "first": "-86.65603638",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "length": "1177.00000000"
        },
        "last": {
          "first": {
            "first": "-86.65603638",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "last": {
            "first": "-86.65603638",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "length": "1177.00000000"
        },
        "length": "1.00000000"
      },
      "last-coordinates": {
        "first": {
          "first": {
            "first": "-86.65603638",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "last": {
            "first": "-86.65603638",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "length": "1177.00000000"
        },
        "last": {
          "first": {
            "first": "-86.65603638",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "last": {
            "first": "-86.65603638",
            "last": "40.00868344",
            "length": "2.00000000"
          },
          "length": "1177.00000000"
        },
        "length": "1.00000000"
      },
      "length": "1.00000000"
    }
  }
}
`;
